Fixed map desc wrapping

--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -160,3 +160,8 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 	color: red;
 	font-weight: bold;
 }
+
+.desc {
+	max-width: 300px;
+	word-wrap: break-word;
+}
